# pwndbg-mcp

./: .gitattributes  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
pwndbg_mcp/: __init__.py  gdb_controller.py  main.py  snapshot.py  tools.py
tests/: test_gdb_controller.py
