[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pwndbg-mcp"
version = "0.1.0"
description = "An MCP server that exposes pwndbg/GDB debugging capabilities to AI agents"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["mcp", "gdb", "pwndbg", "debugging", "ctf", "pwn", "reverse-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "mcp>=1.0.0",
    "pillow>=9.0.0",
]

[project.scripts]
pwndbg-mcp = "pwndbg_mcp.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["pwndbg_mcp"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
